[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arteget"
version = "4.0.0"
description = "Download television programs from Arte +7 site"
readme = "README"
license = { text = "GPL-2.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "m3u8>=4.0.0",
    "requests>=2.28.0",
]

[project.scripts]
arteget = "arteget.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arteget*"]

[tool.black]
line-length = 120
target-version = ["py310"]